--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome from our Home page</h1>
+<div class="home-callout text-center container-fluid">
+  <h1>Welcome to DevMatch</h1>
+  <h1>A Membership Site where Entreprenuers can meet Developers</h1>
+</div>
