Added font awesome library

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,14 +14,17 @@
  *= require_self
  */
  
+
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
+ @import 'font-awesome-sprockets';
+@import 'font-awesome';
  
  //Typography Styles
  h1, h2, h3 {
    font-family: 'Open Sans',sans-serif;
       }
-  
+
   //Background gradient    
  .navbar,.home-callout {
   //Gradient provided by //twitter.com/_ighosh
@@ -44,7 +47,7 @@
     }
 }
 
-//Homepage Styles
+//Homepage Style
 .home-callout {
   color:white;
   margin-top: -20px;
